--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install Zig
-        uses: mattgodbolt/zig-build@v1
+        uses: mlugg/setup-zig@v1
         with:
           version: "0.13.0" # Set the required Zig version
 
