--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,10 @@ jobs:
         with:
           version: "0.13.0" # Set the required Zig version
 
-      - name: Build and Test Zig Project
+      - name: Build and Unit Test
         run: |
-          zig build test
+          zig build test:unit
+
+      - name: Build and Integration Test
+        run: |
+          zig build test:int
