--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,6 +24,9 @@ jobs:
       - name: Build and Unit Test
         run: |
           zig build test:unit
+      - name: Lodestar Test
+        run: |
+          zig build test:lodestar
 
       - name: Build and Integration Test
         run: |
