--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,13 +21,20 @@ jobs:
         with:
           version: "0.13.0" # Set the required Zig version
 
-      - name: Build and Unit Test
+      - name: persistent-merkle-tree - build and unit test
+        working-directory: packages/persistent-merkle-tree
         run: |
           zig build test:unit
-      - name: Lodestar Test
+
+      - name: ssz - build and unit test
+        working-directory: packages/ssz
+        run: |
+          zig build test:unit
+      - name: ssz - lodestar test
+        working-directory: packages/ssz
         run: |
           zig build test:lodestar
-
-      - name: Build and Integration Test
+      - name: ssz - build and integration test
+        working-directory: packages/ssz
         run: |
           zig build test:int
